# ats-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  ROADMAP.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  report-slice-001.md  report-slice-003-server-side-indexed-search.md  slice-001-report.md
.pi/reports/: hide-auditoria-pill-2026-06-22.md  slice-001-dashboard-admin-closure-semantics.md  slice-002-llm1-tracked-exam-hardening.md
.pi/skills/deepseek-slice-writer/: SKILL.md
.pi/skills/openspec-vertical-change-writer/: SKILL.md
.reports/: slice-002-dashboard-display.md
apps/accounts/: admin.py  context_processors.py  decorators.py  forms.py  manual.py  middleware.py  models.py  password_reset_views.py  profile_views.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_seed_roles.py  0003_user_professional_council_and_more.py  0004_usernotification.py  0005_rename_usernotification_indexes.py
apps/accounts/tests/: test_context_processors.py  test_email_services.py  test_intranet_guard.py  test_middleware.py  test_models.py  test_notifications.py  test_password_reset.py  test_profile_password_change.py  test_templates.py  test_user_manual_toc.py  test_user_manual_view.py  test_views.py
apps/admin_ui/: apps.py  decorators.py  forms.py  urls.py  views.py
apps/admin_ui/tests/: test_prompts_crud.py  test_users_crud.py
apps/cases/: admin.py  admission.py  apps.py  models.py  navigation.py  services.py  signals.py
apps/dashboard/: urls.py  views.py
apps/doctor/: apps.py  forms.py  presenters.py  reporting.py  urls.py  views.py
apps/intake/: __init__.py  forms.py  pdf_utils.py  regulation_gate.py  services.py  tasks.py  urls.py  views.py
apps/llm/: admin.py  apps.py  models.py
apps/pipeline/: apps.py  json_parser.py  llm.py  llm1_service.py  llm2_service.py  orchestrator.py  prior_case.py  ptbr_language_guard.py  scope_detection.py  summary.py  tasks.py
apps/scheduler/: apps.py  forms.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
demo-reference/: index.html  login.html
demo-reference/admin/: dashboard.html
demo-reference/css/: styles.css
demo-reference/doctor/: decision.html  queue.html
demo-reference/nir/: case-detail.html  dashboard.html
demo-reference/scheduler/: confirm.html  queue.html
docker/postgres/: init.sql
docs/: DOMAIN_ANALYSIS.md
docs/adr/: ADR-0001-arquitetura-django-web-ssr-ats-triagem-eda.md  ADR-0002-emails-transacionais-autenticacao-cadastro.md  README.md
docs/deploy/: README.md  corrected-case-resubmission-linkage.md
docs/investigations/: 2026-05-18-migration-initial-review.md  2026-05-18-nir-to-doctor-flow-review.md  2026-05-18-self-handoff-align-llm-contract.md
docs/manual/: manual-usuarios.md
openspec/reports/: slice-001-pwa-core-report.md
scripts/: build_user_manual_pdf.py
static/: manifest.json
static/css/: app.css
static/js/: app.js  dashboard_search.js  decision.js  doctor_queue_filter.js  notifications.js  password-toggle.js  pdf-viewer.js  post_schedule_issue_form.js  scheduler_confirm.js  sw.js  upload.js  work_lock.js
tasks/: design-doctor-decided-page-title.md  design-intranet-guard-fix.md  design-origin-unit-display.md
templates/: base.html  home.html
templates/accounts/: login.html  manual.html  notifications.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  profile.html  switch_role.html
templates/admin_ui/: prompt_create.html  prompt_detail.html  prompt_list.html  user_form.html  user_list.html
templates/cases/: _communication_thread.html
templates/dashboard/: _case_list.html  _nav.html  index.html  summaries.html
templates/doctor/: _nav.html  _queue_content.html  decision.html  queue.html
templates/image_viewer/: mobile_image_viewer.html
templates/intake/: _my_cases_content.html  _nav.html  case_detail.html  closed_case_detail.html  closed_cases_search.html  corrected_resubmission.html  intake_home.html  my_cases.html  post_schedule_issue_form.html  upload_success.html
templates/pdf_viewer/: mobile_pdf_viewer.html
templates/scheduler/: _nav.html  _queue_content.html  confirm.html  confirm_post_schedule_issue.html  context_detail.html  historical_search.html  queue.html
tests/: shared_case_fixtures.py  test_base_header_navbar.py  test_css_has_scope.py  test_mobile_pdf_viewer_links.py  test_page_title.py  test_user_manual_artifacts.py
(+541 files in other folders)
