[project]
name = "ats-web"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6",
    "django-fsm",
    "django-q2",
    "psycopg[binary]",
    "whitenoise",
    "python-dotenv",
    "dj-database-url",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
addopts = ["--reuse-db", "-v"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "apps.accounts.tests.*"
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "apps.cases.tests.*"
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "apps.cases.models"
disable_error_code = ["no-untyped-def", "untyped-decorator", "no-any-return"]

[[tool.mypy.overrides]]
module = [
    "django_fsm",
    "django_fsm.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apps.cases.migrations.*"
disable_error_code = ["import-untyped"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
