[project]
name = "ats-web"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6",
    "django-q2",
    "psycopg[binary]",
    "whitenoise",
    "python-dotenv",
    "dj-database-url",
    "django-fsm==3.0.1",
    "pymupdf>=1.27.2.3",
    "openai>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["migrations", ".pi"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["config", "apps"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
addopts = ["--reuse-db", "-v"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "apps.accounts.decorators"
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "apps.accounts.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "apps.cases.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "apps.llm.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "apps.pipeline.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "django_q.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apps.intake.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "apps.doctor.tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "assignment"]

[[tool.mypy.overrides]]
module = "apps.intake.views"
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = "apps.cases.migrations.*"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "apps.cases.models"
disable_error_code = ["no-untyped-def", "untyped-decorator", "no-any-return"]

[[tool.mypy.overrides]]
module = ["django_fsm", "django_fsm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.*.migrations.*"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
